# biped

./: .gitignore  .gitmodules  CMakeLists.txt  MUJOCO_LOG.TXT  Readme.md  Readme.txt  requirements.txt  robot_information.txt
RL_controller/tests/: rl_policy.py
ankle_actuator/dynamixel/: hold_position.py
ankle_actuator/test_inductor_sensor/: inductor_sensor_i2c.py  inductor_sensor_i2c_node.py
biped_bringup/: CMakeLists.txt  package.xml
biped_bringup/config/: realsense.yaml
biped_bringup/launch/: camera_calib_launch.yml  launch_all_nodes.xml  launch_control_RL.yaml  launch_control_RL_hardware.yaml  launch_control_hardware.yaml  launch_control_sim.yaml  launch_control_test.yaml  launch_cp.xml  launch_just_sim.yaml  launch_kinematic_odometry.xml  launch_leg_test.yaml  launch_mocap_odometry.yaml  poll_footsensors.launch.yml  rosbag_play_save_csv.py  rosbag_record.py  state_estimation_launch.yaml
biped_bringup/plotjuggler/: foot_traj.xml  joints_plot.xml  joints_plot_sim.xml  plot_rosbag.xml
biped_bringup/rviz/: biped.rviz
biped_bringup/tmuxp/: run_camera.yaml  run_camera_and_rosbags.yaml  run_ctrl_RL.yaml  run_ctrl_RL_on_hardware.yaml  run_ctrl_in_sim.yaml  run_ctrl_on_hardware.yaml  run_ctrl_test.yaml  run_raspi_imu_moteus_footcontact.yaml  run_robot_viz.yaml  run_robot_workspace.yaml  run_rosbags.yaml  run_test_calibrate.yaml  run_view_robot.yaml  sim.yaml
biped_robot_description/: CMakeLists.txt  package.xml
biped_robot_description/launch/: launch.xml  launch.yaml  launch_RL.yaml  launch_workspace.yaml
biped_robot_description/meshes/: FL_HIP.STL  FR_FOOT.STL  FR_HIP.STL  L_FOOT.STL  L_LOWER_LEG.STL  L_SHOULDER.STL  L_UPPER_LEG.STL  R_LOWER_LEG.STL  base_link.STL
biped_robot_description/meshes_old/: R_SHOULDER.STL  R_UPPER_LEG.STL
biped_robot_description/meshes_v2/: L_HIP.STL  L_LOWER_LEG.STL  L_SHOULDER.STL  L_UPPER_LEG.STL  R_HIP.STL  R_LOWER_LEG.STL  R_SHOULDER.STL  R_UPPER_LEG.STL  base_link.STL
biped_robot_description/urdf/: biped_RL.xml  biped_RL_no_yaw.mujoco.xml  biped_RL_v2.xml  custom_robot.mujoco.xml  custom_robot.urdf  custom_robot_old.mujoco.xml  custom_robot_old.urdf  custom_robot_original.urdf  custom_robot_safe.urdf  custom_robot_v2.mujoco.xml  custom_robot_v2.urdf  leg.mujoco.xml  robot_no_yaw.urdf  robot_urdf_2023_02_20_v3.urdf  scene_mjx_feetonly_flat_terrain_RL.xml  test_masses.py
calibration/: Readme.md
calibration/camera/: aprilgrid.yaml  calib_intrinsics_front-camchain.yaml  calib_intrinsics_left-camchain.yaml  calib_intrinsics_right-camchain.yaml  imu_vn100.yaml
capture_point/: CMakeLists.txt  package.xml
capture_point/config/: params.yaml
capture_point/include/: foot_trajectory.h  foot_trajectory_optimization.hpp  trajectory_optimization.hpp
capture_point/launch/: cp.launch.yml  cp_sim.launch.yml  test_bodies.launch.yml  torque_based_foot_contact.launch.yml
capture_point/scripts/: torque_based_foot_contact.py
capture_point/src/: capture_point.cpp  foot_trajectory.cpp  foot_trajectory_optimization.cpp  publisher_test_body_traj.cpp  trajectory_optimization.cpp
capture_point/test/: foot_traj_optimization_test.cpp  foot_traj_osqp.ipynb  foot_traj_osqp.py  foot_traj_sympy.py  foot_traj_test.cpp  traj_optimization_test.cpp
config/: params.yaml
data_analysis/: rosbag_parser.py
docs/: can_bus_debugging.md  setup_external_camera.md  setup_raspberrypi.md  setup_zenoh_rmw.md  sizing_spring.ipynb
foot_sensor/: package.xml  setup.cfg  setup.py
foot_sensor/foot_sensor/: foot_sensor.py
foot_sensor/launch/: foot_sensor.launch.xml
foot_sensors/: CMakeLists.txt  package.xml
foot_sensors/src/: foot_sensors.cpp
ik_biped/: CMakeLists.txt  package.xml
ik_biped/config/: params.yaml
ik_biped/include/: ik_class_pin.hpp
ik_biped/launch/: deformation_comp.launch.yml  ik.launch.xml  ik.launch.yml  robot_workspace.launch.yml
ik_biped/src/: deformation_compensation.cpp  ik_class_pin.cpp  ik_interface.cpp  robot_workspace.cpp
imit_learning/: DAgger.py  PPO.py  imit_learning.ipynb  imit_learning_ackermann.ipynb  imit_learning_test.ipynb  nnpolicy.py  systems.py  train.py
kinematic_odometry/: CMakeLists.txt  package.xml
kinematic_odometry/config/: params.yaml
kinematic_odometry/launch/: kinematic_odometry.launch.yml
kinematic_odometry/src/: vel_estimation.cpp
launch/: moteus.launch.yml
linux_gpio/: CMakeLists.txt  package.xml
linux_gpio/msg/: StampedBool.msg
linux_gpio/src/: poll.cpp  trigger.cpp
logging_biped/: package.xml  setup.cfg  setup.py
logging_biped/config/: topics.yml
logging_biped/launch/: logging.launch.yml
logging_biped/logging_biped/: logging_biped.py
metrics/: package.xml  setup.py
metrics/launch/: metrics.launch.yml
metrics/metrics/: metrics.py
misc/: package.xml  setup.py
misc/launch/: blackfly_s.launch.py  misc.launch.yml  ransac_transforms.launch.yml
misc/misc/: current_sensor_measurement.ino  extract_tf_base_link_base_link_mocap.py  markers_contacts.py  motor_test.py  proofs.ipynb  pub_baselink_contact.py
mocap_odometry/: CMakeLists.txt  package.xml
mocap_odometry/config/: params.yaml
mocap_odometry/launch/: mocap_odometry.launch.yml
mocap_odometry/src/: mocap_odometry.cpp
moteus_drv/: CMakeLists.txt  Readme.md  package.xml
moteus_drv/config/: L_HAA_id_21.txt  L_HAA_id_21_20240923_firmware_2024_06_17.txt  L_HAA_id_21_20241122_firmware_20240617.txt  L_KFE_id_23.txt  (+26 more)
pos_ctrl/: package.xml  setup.cfg  setup.py
ppo/: model.py  model_testing.py  model_testing_reuse_env.py  new_robot_env.py
rl_controller/: package.xml  setup.py
safety/: package.xml  setup.py
sim_mujoco/: package.xml  setup.cfg  setup.py
src/: joy.py  moteus.cpp
state_estimation/: CMakeLists.txt  package.xml
system/: intel_nuc.md
time_sync_tools/: CMakeLists.txt  package.xml
time_sync_tools/launch/: camera_trigger.launch.yml
time_sync_tools/src/: sync_image.cpp  vectornav_syncin_event.cpp
vicon_odometry/: CMakeLists.txt  package.xml
vicon_odometry/config/: params.yaml
vicon_odometry/launch/: vicon_odometry.yml
vicon_odometry/src/: vicon_odometry_estimation.cpp
(+132 files in other folders)
